@@ -9,6 +9,9 @@ TODO:
 
 version 1.40:
 
+	Improvements:
+	- reduce number of textdomain lookups at import.
+
 version 1.39: Mon  9 Sep 19:57:06 CEST 2024
 
 	Fixes:
